adiciona lógica ao botão 'título'

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <p> </p>
                 <div class="converte">
-                        <button class="converte__titulo ">Título</button>
+                        <button class="converte_tituloqw">Título</button>
                         <button class="converte__invertido ">Inverso</button>           
                         <button class="converte_negrito ">Negrito</button>
                        
