desabilita edição de textareas de resultados

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <p>Texto convertido:</p>
                 <div class='wrapperTextarea'>
-                    <textarea placeholder="(:" autofocus name="textModifiedConversor" id="textModifiedConversor" cols="30" rows="10"></textarea>
+                    <textarea placeholder="(:" autofocus name="textModifiedConversor" id="textModifiedConversor" cols="30" rows="10" disabled></textarea>
                 </div>
                 <p> </p>
                 <div class="converte">
@@ -100,7 +100,7 @@
                 </div>
                 <p>Decimal:</p>
                 <div class='wrapperTextarea'>
-                    <textarea placeholder=":)" autofocus name="textModified" id="textModifiedBinary" cols="30" rows="10"></textarea>
+                    <textarea placeholder=":)" autofocus name="textModified" id="textModifiedBinary" cols="30" rows="10" disabled></textarea>
                 </div>
                 <p> </p>
             </div>
